@@ -15,6 +15,7 @@
             nRF52: Add AntiCat's patch to Nordic's NFC library to cope with malformed NFC requests
             Puck.js: Fix increased battery drain after NFC usage (fix #1171)
             Puck.js: Fix WS2811 output library that would output bad data after neopixel waveform (fix #1154)
+            nRF52: Seed random number generator at boot (fix #1166)
 
      1v92 : nRF5x: Fix issue where Espruino could crash during save() if the flash got into a strange state
             Added Pin.toggle() function
